[gd_scene load_steps=10 format=3 uid="uid://c2gcab4stncxs"]

[ext_resource type="Script" path="res://player.gd" id="1_dp52x"]
[ext_resource type="Texture2D" uid="uid://d1w2sjm1uvbxq" path="res://art/Character_forward1.png" id="2_3sd1n"]
[ext_resource type="Texture2D" uid="uid://jtgjyql6phij" path="res://art/Character_forward2.png" id="3_yaehc"]
[ext_resource type="Texture2D" uid="uid://0blsnp5offd2" path="res://art/Character_forward3.png" id="4_c6q13"]
[ext_resource type="Texture2D" uid="uid://bn74mivh87b2d" path="res://art/Character_forward4.png" id="5_7fjw6"]
[ext_resource type="PackedScene" uid="uid://crbhh5qsvyudi" path="res://debug_window.tscn" id="6_li7a8"]

[sub_resource type="SpriteFrames" id="SpriteFrames_jpw8q"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_3sd1n")
}, {
"duration": 1.0,
"texture": ExtResource("3_yaehc")
}, {
"duration": 1.0,
"texture": ExtResource("4_c6q13")
}, {
"duration": 1.0,
"texture": ExtResource("5_7fjw6")
}],
"loop": true,
"name": &"forward",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"up",
"speed": 5.0
}, {
"frames": [],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_dwc8q"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5l1u2"]

[node name="Player" type="Area2D"]
script = ExtResource("1_dp52x")
speed = null

[node name="AnimatedPlayerSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(2, 2)
sprite_frames = SubResource("SpriteFrames_jpw8q")
animation = &"forward"

[node name="DebugWindow" parent="." instance=ExtResource("6_li7a8")]
visible = false
offset_top = 13.0
offset_bottom = 36.0

[node name="CharacterBody2D" type="CharacterBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="CharacterBody2D"]
shape = SubResource("RectangleShape2D_dwc8q")

[node name="CollisionPlayerShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_5l1u2")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
